--- a/hexforest.html
+++ b/hexforest.html
@@ -1,185 +1,251 @@
 <!DOCTYPE html>
-<html lang="pl">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hex Forest</title>  <!-- tu tytułs trony ale na pasku w przeglądarce  -->
+    <title>Hex Forest - Olaf Hexit Rely Zawadzki</title>
     <link rel="stylesheet" href="styles.css">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
 </head>
 <body>
-    <header>
-        <nav>
-            <a href="index.html">
-                <img src="logohexit.webp" alt="Nox Audios Logo" class="logo" > <!--  tu logo -->
+    <header class="modern-header">
+        <nav class="nav-container">
+            <div class="nav-brand">
+                <a href="index.html">
+                    <img src="logohexit.webp" alt="Olaf Hexit Rely Zawadzki" class="logo">
                 </a>
-            <ul>
-                <li><a href="index.html">Home</a></li>             <!-- podmień na linki swoje aby podpiąć sociale do menu  -->
+            </div>
+            <ul class="nav-menu">
+                <li><a href="index.html">Home</a></li>
                 <li><a href="https://linktr.ee/hexitrely">Bio</a></li>
                 <li><a href="https://maps.app.goo.gl/71z3TfWLPRXDnVmP6">Contact</a></li>
-                <li><a href="offert.html">Offert</a></li>
-                <li><a href="portfolio.html">Portfolio</a></li>
+                <li><a href="offert.html">Services</a></li>
+                <li><a href="portfolio.html" class="active">Portfolio</a></li>
             </ul>
+            <div class="nav-socials">
+                <a href="https://www.instagram.com/hexitrely/" class="social-link" aria-label="Instagram">
+                    <img src="instagram.webp" alt="Instagram" class="social-icon">
+                </a>
+                <a href="https://www.youtube.com/@hexitrely" class="social-link" aria-label="YouTube">
+                    <img src="youtube.webp" alt="YouTube" class="social-icon">
+                </a>
+                <a href="https://www.tiktok.com/@hexitrely" class="social-link" aria-label="TikTok">
+                    <img src="tiktok.webp" alt="TikTok" class="social-icon">
+                </a>
+                <a href="https://open.spotify.com/artist/hexitrely" class="social-link" aria-label="Spotify">
+                    <img src="spotify.webp" alt="Spotify" class="social-icon">
+                </a>
+            </div>
         </nav>
-
-
-
-    
     </header>
-    <section class="banner">
-        <h1>Hex Forest</h1>
-    </section>
 
+    <main>
+        <section class="hero-section">
+            <div class="container">
+                <div class="hero-content">
+                    <div class="hero-text">
+                        <h1 class="hero-title">Hex Forest</h1>
+                        <p class="hero-subtitle">Hexagonal world sound design with nature and magical elements</p>
+                        <div class="hero-buttons">
+                            <a href="https://cyryl514.itch.io/hex-forest" class="btn btn-primary btn-large">Play on Itch.io</a>
+                            <a href="portfolio.html" class="btn btn-secondary btn-large">Back to Portfolio</a>
+                        </div>
+                    </div>
+                    <div class="hero-image">
+                        <img src="hexit/HexForest/hf logo.webp" alt="Hex Forest" class="profile-image">
+                    </div>
+                </div>
+            </div>
+        </section>
 
-    <section class="team">
+        <section class="about-section">
+            <div class="container">
+                <h2 class="section-title">About the Sound Design</h2>
+                <div class="about-content">
+                    <div class="about-description">
+                        <p>All sounds in this game were created by me and my friend Dawid Blacharski. We crafted immersive nature sounds including trees, footsteps, magical elements, pickups, clicks, items, and much more for this unique hexagonal world.</p>
+                        <p>Below you can listen to the sounds I created for this geometric forest adventure.</p>
+                    </div>
+                    <div class="about-image">
+                        <img src="hexit/HexForest/hf1.jpg" alt="Hex Forest Gameplay" class="about-img">
+                    </div>
+                </div>
+            </div>
+        </section>
 
+        <section class="audio-showcase">
+            <div class="container">
+                <h2 class="section-title">Sound Effects</h2>
+                <div class="audio-grid">
+                    <div class="audio-item">
+                        <h3>Fire Ball Explosion</h3>
+                        <p>Magical fire projectile sound</p>
+                        <audio controls style="width: 100%; margin-top: 1rem;">
+                            <source src="hexit/HexForest/audio/ball exploded fire.wav" type="audio/wav">
+                            Your browser does not support the audio element.
+                        </audio>
+                    </div>
+                    <div class="audio-item">
+                        <h3>Click Sound</h3>
+                        <p>UI interaction sound</p>
+                        <audio controls style="width: 100%; margin-top: 1rem;">
+                            <source src="hexit/HexForest/audio/click solo.wav" type="audio/wav">
+                            Your browser does not support the audio element.
+                        </audio>
+                    </div>
+                    <div class="audio-item">
+                        <h3>Click Variation</h3>
+                        <p>Alternative click sound</p>
+                        <audio controls style="width: 100%; margin-top: 1rem;">
+                            <source src="hexit/HexForest/audio/click.wav" type="audio/wav">
+                            Your browser does not support the audio element.
+                        </audio>
+                    </div>
+                    <div class="audio-item">
+                        <h3>Acid Rain</h3>
+                        <p>Environmental weather effect</p>
+                        <audio controls style="width: 100%; margin-top: 1rem;">
+                            <source src="hexit/HexForest/audio/deszcz kwasowy.wav" type="audio/wav">
+                            Your browser does not support the audio element.
+                        </audio>
+                    </div>
+                    <div class="audio-item">
+                        <h3>Fire Ball Flying</h3>
+                        <p>Projectile movement sound</p>
+                        <audio controls style="width: 100%; margin-top: 1rem;">
+                            <source src="hexit/HexForest/audio/Fire ball fliyng.wav" type="audio/wav">
+                            Your browser does not support the audio element.
+                        </audio>
+                    </div>
+                    <div class="audio-item">
+                        <h3>Forest Ambience</h3>
+                        <p>Natural forest background</p>
+                        <audio controls style="width: 100%; margin-top: 1rem;">
+                            <source src="hexit/HexForest/audio/Forest.wav" type="audio/wav">
+                            Your browser does not support the audio element.
+                        </audio>
+                    </div>
+                    <div class="audio-item">
+                        <h3>Deer Sound</h3>
+                        <p>Wildlife ambient sound</p>
+                        <audio controls style="width: 100%; margin-top: 1rem;">
+                            <source src="hexit/HexForest/audio/jeleń.wav" type="audio/wav">
+                            Your browser does not support the audio element.
+                        </audio>
+                    </div>
+                    <div class="audio-item">
+                        <h3>Bear Sound</h3>
+                        <p>Wildlife ambient sound</p>
+                        <audio controls style="width: 100%; margin-top: 1rem;">
+                            <source src="hexit/HexForest/audio/mis.wav" type="audio/wav">
+                            Your browser does not support the audio element.
+                        </audio>
+                    </div>
+                    <div class="audio-item">
+                        <h3>Owl Sound</h3>
+                        <p>Wildlife ambient sound</p>
+                        <audio controls style="width: 100%; margin-top: 1rem;">
+                            <source src="hexit/HexForest/audio/sowa.wav" type="audio/wav">
+                            Your browser does not support the audio element.
+                        </audio>
+                    </div>
+                    <div class="audio-item">
+                        <h3>Tree Planting</h3>
+                        <p>Hexagonal tree placement sound</p>
+                        <audio controls style="width: 100%; margin-top: 1rem;">
+                            <source src="hexit/HexForest/audio/Tree plant hexagon.wav" type="audio/wav">
+                            Your browser does not support the audio element.
+                        </audio>
+                    </div>
+                </div>
+            </div>
+        </section>
 
+        <section class="audio-showcase" style="background: var(--bg-primary);">
+            <div class="container">
+                <h2 class="section-title">Soundtrack</h2>
+                <div class="audio-grid">
+                    <div class="audio-item">
+                        <h3>Build Ambient</h3>
+                        <p>Construction phase background music</p>
+                        <audio controls style="width: 100%; margin-top: 1rem;">
+                            <source src="hexit/HexForest/audio/Build ambient.wav" type="audio/wav">
+                            Your browser does not support the audio element.
+                        </audio>
+                    </div>
+                    <div class="audio-item">
+                        <h3>Dark Ambient</h3>
+                        <p>Mysterious atmospheric track</p>
+                        <audio controls style="width: 100%; margin-top: 1rem;">
+                            <source src="hexit/HexForest/audio/Dark ambient.wav" type="audio/wav">
+                            Your browser does not support the audio element.
+                        </audio>
+                    </div>
+                    <div class="audio-item">
+                        <h3>Short Build Ambient</h3>
+                        <p>Condensed construction music</p>
+                        <audio controls style="width: 100%; margin-top: 1rem;">
+                            <source src="hexit/HexForest/audio/krótszy build ambient.wav" type="audio/wav">
+                            Your browser does not support the audio element.
+                        </audio>
+                    </div>
+                </div>
+            </div>
+        </section>
 
-        <div class="team-member">
-            <img src="hexit/HexForest/hf logo.webp" alt="Hex Forest">
-            <p class="name">Hex Forest</p>
-            <a class="teaminfo">JellyJam 2024</a>
-            <div class="separator"></div>
-            <a href="https://cyryl514.itch.io/hex-forest"  class="buy-button">Play</a>
-        </div>
-
-
-        <div class="indexpromo-image-section">
-            <img src="hexit/HexForest/hf1.jpg" alt="Obrazek bez tła">
-          </div>
-
-    </section>
-
-    <section id="about-nox">
-        <div class="nox-team-description">
-            <h2>About Sound Design</h2>
-            <p>
-               All Sounds in this game were made by me and my friend Dawid Blacharski. 
-               We started from scratch, making sounds of nature, trees, steps, some magic, pickups, clicks, items, and alot more play the game and check by your self. Below you can listen sounds made by me :]
-            </p>
-        </div>
-    </section>
-
+        <section class="gallery-section">
+            <div class="container">
+                <h2 class="section-title">Game Screenshots</h2>
+                <div class="compact-gallery">
+                    <img src="hexit/HexForest/hf2.png" alt="Hex Forest Screenshot 1">
+                    <img src="hexit/HexForest/hf3.png" alt="Hex Forest Screenshot 2">
+                    <img src="hexit/HexForest/hf4.png" alt="Hex Forest Screenshot 3">
+                    <img src="hexit/HexForest/hf5.png" alt="Hex Forest Screenshot 4">
+                    <img src="hexit/HexForest/hf1.jpg" alt="Hex Forest Screenshot 5">
+                </div>
+            </div>
+        </section>
+    </main>
 
     <div class="privacy-notice" id="privacyNotice">
-        <p>Our website uses cookies to improve the quality of services. Read ours <a href="polityka.html">Privacy Policy</a>.</p>
+        <p>Our website uses cookies to improve the quality of services. Read our <a href="polityka.html">Privacy Policy</a>.</p>
         <button id="acceptButton">Accept</button>
     </div>
-    <div class="separatorsecond">-</div>
-
-    <div class="audio-player">
-        <h1>Sounds</h1>
-        <audio controls>
-            <source src="hexit/HexForest/audio/ball exploded fire.wav" type="audio/mpeg">
-            Twoja przeglądarka nie obsługuje elementu audio.
-        </audio>
-
-        <audio controls>
-            <source src="hexit/HexForest/audio/click solo.wav" type="audio/mpeg">
-            Twoja przeglądarka nie obsługuje elementu audio.
-        </audio>
-
-        <audio controls>
-            <source src="hexit/HexForest/audio/click.wav" type="audio/mpeg">
-            Twoja przeglądarka nie obsługuje elementu audio.
-        </audio>
-
-        <audio controls>
-            <source src="hexit/HexForest/audio/deszcz kwasowy.wav" type="audio/mpeg">
-            Twoja przeglądarka nie obsługuje elementu audio.
-        </audio>
-
-        <audio controls>
-            <source src="hexit/HexForest/audio/Fire ball fliyng.wav" type="audio/mpeg">
-            Twoja przeglądarka nie obsługuje elementu audio.
-        </audio>
-
-        <audio controls>
-            <source src="hexit/HexForest/audio/click.wav" type="audio/mpeg">
-            Twoja przeglądarka nie obsługuje elementu audio.
-        </audio>
-
-        <audio controls>
-            <source src="hexit/HexForest/audio/Forest.wav" type="audio/mpeg">
-            Twoja przeglądarka nie obsługuje elementu audio.
-        </audio>
-
-        <audio controls>
-            <source src="hexit/HexForest/audio/jeleń.wav" type="audio/mpeg">
-            Twoja przeglądarka nie obsługuje elementu audio.
-        </audio>
-
-        <audio controls>
-            <source src="hexit/HexForest/audio/mis.wav" type="audio/mpeg">
-            Twoja przeglądarka nie obsługuje elementu audio.
-        </audio>
-
-        <audio controls>
-            <source src="hexit/HexForest/audio/sowa.wav" type="audio/mpeg">
-            Twoja przeglądarka nie obsługuje elementu audio.
-        </audio>
-
-        <audio controls>
-            <source src="hexit/HexForest/audio/Tree plant hexagon.wav" type="audio/mpeg">
-            Twoja przeglądarka nie obsługuje elementu audio.
-        </audio>
-
-
-
-        <h1>Sound Track</h1>
-
-        <audio controls>
-            <source src="hexit/HexForest/audio/Build ambient.wav" type="audio/mpeg">
-            Twoja przeglądarka nie obsługuje elementu audio.
-        </audio>
-
-        <audio controls>
-            <source src="hexit/HexForest/audio/Dark ambient.wav" type="audio/mpeg">
-            Twoja przeglądarka nie obsługuje elementu audio.
-        </audio>
-
-        <audio controls>
-            <source src="hexit/HexForest/audio/krótszy build ambient.wav" type="audio/mpeg">
-            Twoja przeglądarka nie obsługuje elementu audio.
-        </audio>
-
-
-
-        <div class="separatorsecond">-</div>
-
-    <div class="gallery">
-        <img src="hexit/HexForest/hf2.png" alt="Hex Forest">
-        <img src="hexit/HexForest/hf3.png" alt="Hex Forest">
-        <img src="hexit/HexForest/hf4.png" alt="Hex Forest">
-        <img src="hexit/HexForest/hf5.png" alt="Hex Forest">
-        <img src="hexit/HexForest/hf1.jpg" alt="Hex Forest">
-
-    </div>
-
-
-
-    <div class="separatorsecond">-</div>
-
-    <div class="separatorsecond">-</div>
-
-
-
-
-
 
     <script src="scripts.js"></script>
 
-    <footer>
-        <div class="footer-content">
-            <p>&copy; 2024 Nox. All rights reserved.</p>
-            <ul class="social-media">
-                <li><a href="https://www.instagram.com/noxaudios/">Instagram</a></li>
-                <li><a href="https://www.youtube.com/@noxaudiosofficial/featured">Youtube</a></li>
-            </ul>
+    <footer class="modern-footer">
+        <div class="container">
+            <div class="footer-content">
+                <div class="footer-brand">
+                    <img src="logohexit.webp" alt="Olaf Hexit Rely Zawadzki" class="footer-logo">
+                    <p>Sound Designer & Composer</p>
+                </div>
+                <div class="footer-links">
+                    <div class="footer-section">
+                        <h4>Navigation</h4>
+                        <ul>
+                            <li><a href="index.html">Home</a></li>
+                            <li><a href="portfolio.html">Portfolio</a></li>
+                            <li><a href="offert.html">Services</a></li>
+                            <li><a href="https://linktr.ee/hexitrely">Bio</a></li>
+                        </ul>
+                    </div>
+                    <div class="footer-section">
+                        <h4>Social Media</h4>
+                        <ul>
+                            <li><a href="https://www.instagram.com/hexitrely/">Instagram</a></li>
+                            <li><a href="https://www.youtube.com/@hexitrely">YouTube</a></li>
+                            <li><a href="https://www.tiktok.com/@hexitrely">TikTok</a></li>
+                            <li><a href="https://open.spotify.com/artist/hexitrely">Spotify</a></li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+            <div class="footer-bottom">
+                <p>&copy; 2024 Olaf Hexit Rely Zawadzki. All rights reserved.</p>
+            </div>
         </div>
     </footer>
-
-
-
-
 </body>
 </html>
