--- a/orbsandspirits.html
+++ b/orbsandspirits.html
@@ -1,198 +1,234 @@
 <!DOCTYPE html>
-<html lang="pl">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Orbs And Spirits</title>  <!-- tu tytułs trony ale na pasku w przeglądarce  -->
+    <title>Orbs and Spirits - Olaf Hexit Rely Zawadzki</title>
     <link rel="stylesheet" href="styles.css">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
 </head>
 <body>
-    <header>
-        <nav>
-            <a href="index.html">
-                <img src="logohexit.webp" alt="Nox Audios Logo" class="logo" ><!--  tu logo -->
+    <header class="modern-header">
+        <nav class="nav-container">
+            <div class="nav-brand">
+                <a href="index.html">
+                    <img src="logohexit.webp" alt="Olaf Hexit Rely Zawadzki" class="logo">
                 </a>
-            <ul> 
-                <li><a href="index.html">Home</a></li>                                         <!-- podmień na linki swoje aby podpiąć sociale do menu  -->
+            </div>
+            <ul class="nav-menu">
+                <li><a href="index.html">Home</a></li>
                 <li><a href="https://linktr.ee/hexitrely">Bio</a></li>
                 <li><a href="https://maps.app.goo.gl/71z3TfWLPRXDnVmP6">Contact</a></li>
-                <li><a href="offert.html">Offert</a></li>
-                <li><a href="portfolio.html">Portfolio</a></li>
+                <li><a href="offert.html">Services</a></li>
+                <li><a href="portfolio.html" class="active">Portfolio</a></li>
             </ul>
+            <div class="nav-socials">
+                <a href="https://www.instagram.com/hexitrely/" class="social-link" aria-label="Instagram">
+                    <img src="instagram.webp" alt="Instagram" class="social-icon">
+                </a>
+                <a href="https://www.youtube.com/@hexitrely" class="social-link" aria-label="YouTube">
+                    <img src="youtube.webp" alt="YouTube" class="social-icon">
+                </a>
+                <a href="https://www.tiktok.com/@hexitrely" class="social-link" aria-label="TikTok">
+                    <img src="tiktok.webp" alt="TikTok" class="social-icon">
+                </a>
+                <a href="https://open.spotify.com/artist/hexitrely" class="social-link" aria-label="Spotify">
+                    <img src="spotify.webp" alt="Spotify" class="social-icon">
+                </a>
+            </div>
         </nav>
-
-
-
-    
     </header>
-    <section class="banner">
-        <h1>Orbies and Spirits</h1>
-    </section>
-   
-    <section class="team">
 
+    <main>
+        <section class="hero-section">
+            <div class="container">
+                <div class="hero-content">
+                    <div class="hero-text">
+                        <h1 class="hero-title">Orbs and Spirits</h1>
+                        <p class="hero-subtitle">Vibrant 3D platformer with immersive sound effects and music</p>
+                        <div class="hero-buttons">
+                            <a href="https://8bitjelly.com/pl" class="btn btn-primary btn-large">Play on 8bitjelly</a>
+                            <a href="portfolio.html" class="btn btn-secondary btn-large">Back to Portfolio</a>
+                        </div>
+                    </div>
+                    <div class="hero-image">
+                        <img src="hexit/platformer.webp" alt="Orbs and Spirits" class="profile-image">
+                    </div>
+                </div>
+            </div>
+        </section>
 
+        <section class="about-section">
+            <div class="container">
+                <h2 class="section-title">About the Sound Design</h2>
+                <div class="about-content">
+                    <div class="about-description">
+                        <p>Together with Davsky, I create immersive sound effects and music for Orbs and Spirits, a vibrant 3D game world. We crafted unique audio that brings the colorful platformer to life through atmospheric sound design.</p>
+                        <p>Below you can listen to samples of my work for this enchanting adventure.</p>
+                    </div>
+                    <div class="about-image">
+                        <img src="hexit/platformer/image (7).png" alt="Orbs and Spirits Gameplay" class="about-img">
+                    </div>
+                </div>
+            </div>
+        </section>
 
-        <div class="team-member">
-            <img src="hexit/platformer.webp" alt="Orbies and Spirits">
-            <p class="name">Orbies and Spirits</p>
-            <a class="teaminfo">8bitjelly</a>
-            <div class="separator"></div>
-            <a href="https://8bitjelly.com/pl"  class="buy-button">Play</a>
-        </div>
+        <section class="audio-showcase">
+            <div class="container">
+                <h2 class="section-title">Sound Effects</h2>
+                <div class="audio-grid">
+                    <div class="audio-item">
+                        <h3>Platformer Sound 1</h3>
+                        <p>Gameplay sound effect</p>
+                        <audio controls style="width: 100%; margin-top: 1rem;">
+                            <source src="hexit/platformer/platformer sounds/platformersounds (1).mp3" type="audio/mpeg">
+                            Your browser does not support the audio element.
+                        </audio>
+                    </div>
+                    <div class="audio-item">
+                        <h3>Platformer Sound 2</h3>
+                        <p>Gameplay sound effect</p>
+                        <audio controls style="width: 100%; margin-top: 1rem;">
+                            <source src="hexit/platformer/platformer sounds/platformersounds (2).mp3" type="audio/mpeg">
+                            Your browser does not support the audio element.
+                        </audio>
+                    </div>
+                    <div class="audio-item">
+                        <h3>Platformer Sound 3</h3>
+                        <p>Gameplay sound effect</p>
+                        <audio controls style="width: 100%; margin-top: 1rem;">
+                            <source src="hexit/platformer/platformer sounds/platformersounds (3).mp3" type="audio/mpeg">
+                            Your browser does not support the audio element.
+                        </audio>
+                    </div>
+                    <div class="audio-item">
+                        <h3>Platformer Sound 4</h3>
+                        <p>Gameplay sound effect</p>
+                        <audio controls style="width: 100%; margin-top: 1rem;">
+                            <source src="hexit/platformer/platformer sounds/platformersounds (4).mp3" type="audio/mpeg">
+                            Your browser does not support the audio element.
+                        </audio>
+                    </div>
+                    <div class="audio-item">
+                        <h3>Platformer Sound 5</h3>
+                        <p>Gameplay sound effect</p>
+                        <audio controls style="width: 100%; margin-top: 1rem;">
+                            <source src="hexit/platformer/platformer sounds/platformersounds (5).mp3" type="audio/mpeg">
+                            Your browser does not support the audio element.
+                        </audio>
+                    </div>
+                    <div class="audio-item">
+                        <h3>Platformer Sound 6</h3>
+                        <p>Gameplay sound effect</p>
+                        <audio controls style="width: 100%; margin-top: 1rem;">
+                            <source src="hexit/platformer/platformer sounds/platformersounds (6).mp3" type="audio/mpeg">
+                            Your browser does not support the audio element.
+                        </audio>
+                    </div>
+                    <div class="audio-item">
+                        <h3>Platformer Sound 7</h3>
+                        <p>Gameplay sound effect</p>
+                        <audio controls style="width: 100%; margin-top: 1rem;">
+                            <source src="hexit/platformer/platformer sounds/platformersounds (7).mp3" type="audio/mpeg">
+                            Your browser does not support the audio element.
+                        </audio>
+                    </div>
+                    <div class="audio-item">
+                        <h3>Platformer Sound 8</h3>
+                        <p>Gameplay sound effect</p>
+                        <audio controls style="width: 100%; margin-top: 1rem;">
+                            <source src="hexit/platformer/platformer sounds/platformersounds (8).wav" type="audio/wav">
+                            Your browser does not support the audio element.
+                        </audio>
+                    </div>
+                    <div class="audio-item">
+                        <h3>Platformer Sound 10</h3>
+                        <p>Gameplay sound effect</p>
+                        <audio controls style="width: 100%; margin-top: 1rem;">
+                            <source src="hexit/platformer/platformer sounds/platformersounds (10).mp3" type="audio/mpeg">
+                            Your browser does not support the audio element.
+                        </audio>
+                    </div>
+                </div>
+            </div>
+        </section>
 
+        <section class="audio-showcase" style="background: var(--bg-primary);">
+            <div class="container">
+                <h2 class="section-title">Soundtrack</h2>
+                <div class="audio-grid">
+                    <div class="audio-item">
+                        <h3>Platformer Track 8</h3>
+                        <p>Background music track</p>
+                        <audio controls style="width: 100%; margin-top: 1rem;">
+                            <source src="hexit/platformer/platformer sounds/platformersounds (8).mp3" type="audio/mpeg">
+                            Your browser does not support the audio element.
+                        </audio>
+                    </div>
+                    <div class="audio-item">
+                        <h3>Platformer Track 9</h3>
+                        <p>Background music track</p>
+                        <audio controls style="width: 100%; margin-top: 1rem;">
+                            <source src="hexit/platformer/platformer sounds/platformersounds (9).mp3" type="audio/mpeg">
+                            Your browser does not support the audio element.
+                        </audio>
+                    </div>
+                </div>
+            </div>
+        </section>
 
-        <div class="indexpromo-image-section">
-            <img src="hexit/platformer/image (7).png" alt="Orbies and Spirits background">
-          </div>
-
-    </section>
-
-    <section id="about-nox">
-        <div class="nox-team-description">
-            <h2>About Sound Design</h2>
-            <p>
-                Orbies and Spirits</p><p>
-                Together with Davsky, I create immersive sound effects and music for Orbies and Spirits, a vibrant 3D game world. Explore the unique atmosphere brought to life through our audio design. Listen to samples of my work
-            </p>
-        </div>
-    </section>
-
+        <section class="gallery-section">
+            <div class="container">
+                <h2 class="section-title">Game Screenshots</h2>
+                <div class="compact-gallery">
+                    <img src="hexit/platformer/p1.webp" alt="Orbs and Spirits Screenshot 1">
+                    <img src="hexit/platformer/p2.webp" alt="Orbs and Spirits Screenshot 2">
+                    <img src="hexit/platformer/p3.webp" alt="Orbs and Spirits Screenshot 3">
+                    <img src="hexit/platformer/p4.webp" alt="Orbs and Spirits Screenshot 4">
+                </div>
+            </div>
+        </section>
+    </main>
 
     <div class="privacy-notice" id="privacyNotice">
-        <p>Our website uses cookies to improve the quality of services. Read ours <a href="polityka.html">Privacy Policy</a>.</p>
+        <p>Our website uses cookies to improve the quality of services. Read our <a href="polityka.html">Privacy Policy</a>.</p>
         <button id="acceptButton">Accept</button>
     </div>
-    <div class="separatorsecond">-</div>
-
-    <div class="audio-player">
-        <h1>Sounds</h1>
-        <audio controls>
-            <source src="hexit/platformer/platformer sounds/platformersounds (1).mp3" type="audio/mpeg">
-            Twoja przeglądarka nie obsługuje elementu audio.
-        </audio>
-
-        <audio controls>
-            <source src="hexit/platformer/platformer sounds/platformersounds (1).wav" type="audio/mpeg">
-            Twoja przeglądarka nie obsługuje elementu audio.
-        </audio>
-
-        <audio controls>
-            <source src="hexit/platformer/platformer sounds/platformersounds (2).mp3" type="audio/mpeg">
-            Twoja przeglądarka nie obsługuje elementu audio.
-        </audio>
-
-        <audio controls>
-            <source src="hexit/platformer/platformer sounds/platformersounds (2).wav" type="audio/mpeg">
-            Twoja przeglądarka nie obsługuje elementu audio.
-        </audio>
-
-        <audio controls>
-            <source src="hexit/platformer/platformer sounds/platformersounds (3).mp3" type="audio/mpeg">
-            Twoja przeglądarka nie obsługuje elementu audio.
-        </audio>
-
-        <audio controls>
-            <source src="hexit/platformer/platformer sounds/platformersounds (3).wav" type="audio/mpeg">
-            Twoja przeglądarka nie obsługuje elementu audio.
-        </audio>
-
-        <audio controls>
-            <source src="hexit/platformer/platformer sounds/platformersounds (4).mp3" type="audio/mpeg">
-            Twoja przeglądarka nie obsługuje elementu audio.
-        </audio>
-        <audio controls>
-            <source src="hexit/platformer/platformer sounds/platformersounds (4).wav" type="audio/mpeg">
-            Twoja przeglądarka nie obsługuje elementu audio.
-        </audio>
-        <audio controls>
-            <source src="hexit/platformer/platformer sounds/platformersounds (5).mp3" type="audio/mpeg">
-            Twoja przeglądarka nie obsługuje elementu audio.
-        </audio>
-        <audio controls>
-            <source src="hexit/platformer/platformer sounds/platformersounds (5).wav" type="audio/mpeg">
-            Twoja przeglądarka nie obsługuje elementu audio.
-        </audio>
-        <audio controls>
-            <source src="hexit/platformer/platformer sounds/platformersounds (6).mp3" type="audio/mpeg">
-            Twoja przeglądarka nie obsługuje elementu audio.
-        </audio>
-        <audio controls>
-            <source src="hexit/platformer/platformer sounds/platformersounds (6).wav" type="audio/mpeg">
-            Twoja przeglądarka nie obsługuje elementu audio.
-        </audio>
-        <audio controls>
-            <source src="hexit/platformer/platformer sounds/platformersounds (7).mp3" type="audio/mpeg">
-            Twoja przeglądarka nie obsługuje elementu audio.
-        </audio>
-        <audio controls>
-            <source src="hexit/platformer/platformer sounds/platformersounds (7).wav" type="audio/mpeg">
-            Twoja przeglądarka nie obsługuje elementu audio.
-        </audio>
-        <audio controls>
-            <source src="hexit/platformer/platformer sounds/platformersounds (8).wav" type="audio/mpeg">
-            Twoja przeglądarka nie obsługuje elementu audio.
-        </audio>
-        <audio controls>
-            <source src="hexit/platformer/platformer sounds/platformersounds (8).wav" type="audio/mpeg">
-            Twoja przeglądarka nie obsługuje elementu audio.
-        </audio>
-        <audio controls>
-            <source src="hexit/platformer/platformer sounds/platformersounds (10).mp3" type="audio/mpeg">
-            Twoja przeglądarka nie obsługuje elementu audio.
-        </audio>
-        <audio controls>
-            <source src="hexit/platformer/platformer sounds/platformersounds (10).wav" type="audio/mpeg">
-            Twoja przeglądarka nie obsługuje elementu audio.
-        </audio>
-
-        <h1>Sound Track</h1>
-
-        <audio controls>
-            <source src="hexit/platformer/platformer sounds/platformersounds (8).mp3" type="audio/mpeg">
-            Twoja przeglądarka nie obsługuje elementu audio.
-        </audio>
-        <audio controls>
-            <source src="hexit/platformer/platformer sounds/platformersounds (9).mp3" type="audio/mpeg">
-            Twoja przeglądarka nie obsługuje elementu audio.
-        </audio>
-
-
-
-        <div class="separatorsecond">-</div>
-
-    <div class="gallery">
-        <img src="hexit/platformer/p1.webp" alt="Orbies and Spirits">
-        <img src="hexit/platformer/p2.webp" alt="Orbies and Spirits">
-        <img src="hexit/platformer/p3.webp" alt="Orbies and Spirits">
-        <img src="hexit/platformer/p4.webp" alt="Orbies and Spirits">
-
-</div>
-
-
-    <div class="separatorsecond">-</div>
-
-    <div class="separatorsecond">-</div>
-
-
-
-
-
 
     <script src="scripts.js"></script>
 
-    <footer>
-        <div class="footer-content">
-            <p>&copy; 2024 Nox. All rights reserved.</p>
-            <ul class="social-media">
-                <li><a href="https://www.instagram.com/noxaudios/">Instagram</a></li>
-                <li><a href="https://www.youtube.com/@noxaudiosofficial/featured">Youtube</a></li>
-            </ul>
+    <footer class="modern-footer">
+        <div class="container">
+            <div class="footer-content">
+                <div class="footer-brand">
+                    <img src="logohexit.webp" alt="Olaf Hexit Rely Zawadzki" class="footer-logo">
+                    <p>Sound Designer & Composer</p>
+                </div>
+                <div class="footer-links">
+                    <div class="footer-section">
+                        <h4>Navigation</h4>
+                        <ul>
+                            <li><a href="index.html">Home</a></li>
+                            <li><a href="portfolio.html">Portfolio</a></li>
+                            <li><a href="offert.html">Services</a></li>
+                            <li><a href="https://linktr.ee/hexitrely">Bio</a></li>
+                        </ul>
+                    </div>
+                    <div class="footer-section">
+                        <h4>Social Media</h4>
+                        <ul>
+                            <li><a href="https://www.instagram.com/hexitrely/">Instagram</a></li>
+                            <li><a href="https://www.youtube.com/@hexitrely">YouTube</a></li>
+                            <li><a href="https://www.tiktok.com/@hexitrely">TikTok</a></li>
+                            <li><a href="https://open.spotify.com/artist/hexitrely">Spotify</a></li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+            <div class="footer-bottom">
+                <p>&copy; 2024 Olaf Hexit Rely Zawadzki. All rights reserved.</p>
+            </div>
         </div>
     </footer>
-
-
-
-
 </body>
 </html>
