--- a/spirit.html
+++ b/spirit.html
@@ -1,156 +1,214 @@
 <!DOCTYPE html>
-<html lang="pl">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Spirits Among the trees</title>  <!-- tu tytułs trony ale na pasku w przeglądarce  -->
+    <title>Spirits Among the Trees - Olaf Hexit Rely Zawadzki</title>
     <link rel="stylesheet" href="styles.css">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
 </head>
 <body>
-    <header>
-        <nav>
-            <a href="index.html">
-                <img src="logohexit.webp" alt="Olaf Hexit Rely Zawadzki" class="logo" ><!--  tu logo -->
+    <header class="modern-header">
+        <nav class="nav-container">
+            <div class="nav-brand">
+                <a href="index.html">
+                    <img src="logohexit.webp" alt="Olaf Hexit Rely Zawadzki" class="logo">
                 </a>
-            <ul>
-                <li><a href="index.html">Home</a></li>                                    <!-- podmień na linki swoje aby podpiąć sociale do menu  -->
+            </div>
+            <ul class="nav-menu">
+                <li><a href="index.html">Home</a></li>
                 <li><a href="https://linktr.ee/hexitrely">Bio</a></li>
                 <li><a href="https://maps.app.goo.gl/71z3TfWLPRXDnVmP6">Contact</a></li>
-                <li><a href="offert.html">Offert</a></li>
-                <li><a href="portfolio.html">Portfolio</a></li>
+                <li><a href="offert.html">Services</a></li>
+                <li><a href="portfolio.html" class="active">Portfolio</a></li>
             </ul>
+            <div class="nav-socials">
+                <a href="https://www.instagram.com/hexitrely/" class="social-link" aria-label="Instagram">
+                    <img src="instagram.webp" alt="Instagram" class="social-icon">
+                </a>
+                <a href="https://www.youtube.com/@hexitrely" class="social-link" aria-label="YouTube">
+                    <img src="youtube.webp" alt="YouTube" class="social-icon">
+                </a>
+                <a href="https://www.tiktok.com/@hexitrely" class="social-link" aria-label="TikTok">
+                    <img src="tiktok.webp" alt="TikTok" class="social-icon">
+                </a>
+                <a href="https://open.spotify.com/artist/hexitrely" class="social-link" aria-label="Spotify">
+                    <img src="spotify.webp" alt="Spotify" class="social-icon">
+                </a>
+            </div>
         </nav>
-
-
-
-    
     </header>
-    <section class="banner">
-        <h1>Spirits Among the trees</h1>
-    </section>
-   
 
+    <main>
+        <section class="hero-section">
+            <div class="container">
+                <div class="hero-content">
+                    <div class="hero-text">
+                        <h1 class="hero-title">Spirits Among the Trees</h1>
+                        <p class="hero-subtitle">Mystical forest adventure with immersive nature sound design</p>
+                        <div class="hero-buttons">
+                            <a href="https://voxten.itch.io/spirits-among-the-trees" class="btn btn-primary btn-large">Play on Itch.io</a>
+                            <a href="portfolio.html" class="btn btn-secondary btn-large">Back to Portfolio</a>
+                        </div>
+                    </div>
+                    <div class="hero-image">
+                        <img src="hexit/hine gif gierki.gif" alt="Spirits Among the Trees" class="profile-image">
+                    </div>
+                </div>
+            </div>
+        </section>
 
-    <section class="team">
+        <section class="about-section">
+            <div class="container">
+                <h2 class="section-title">About the Sound Design</h2>
+                <div class="about-content">
+                    <div class="about-description">
+                        <p>All sounds in this game were created by me and my friend Dawid Blacharski. We crafted immersive nature sounds including trees, footsteps, magical elements, pickups, clicks, items, and much more for this mystical forest adventure.</p>
+                        <p>Below you can listen to the sounds I created for this enchanting spirit-filled journey.</p>
+                    </div>
+                    <div class="about-image">
+                        <img src="hexit/bg.png" alt="Spirits Among the Trees Gameplay" class="about-img">
+                    </div>
+                </div>
+            </div>
+        </section>
 
+        <section class="audio-showcase">
+            <div class="container">
+                <h2 class="section-title">Sound Effects</h2>
+                <div class="audio-grid">
+                    <div class="audio-item">
+                        <h3>Bush Cut</h3>
+                        <p>Environmental interaction sound</p>
+                        <audio controls style="width: 100%; margin-top: 1rem;">
+                            <source src="hexit/sounds/spirits/bush cut.wav" type="audio/wav">
+                            Your browser does not support the audio element.
+                        </audio>
+                    </div>
+                    <div class="audio-item">
+                        <h3>Chest Close</h3>
+                        <p>Container interaction sound</p>
+                        <audio controls style="width: 100%; margin-top: 1rem;">
+                            <source src="hexit/sounds/spirits/chest close.wav" type="audio/wav">
+                            Your browser does not support the audio element.
+                        </audio>
+                    </div>
+                    <div class="audio-item">
+                        <h3>Chest Open</h3>
+                        <p>Container interaction sound</p>
+                        <audio controls style="width: 100%; margin-top: 1rem;">
+                            <source src="hexit/sounds/spirits/chest open.wav" type="audio/wav">
+                            Your browser does not support the audio element.
+                        </audio>
+                    </div>
+                    <div class="audio-item">
+                        <h3>Full Long</h3>
+                        <p>Extended ambient sound</p>
+                        <audio controls style="width: 100%; margin-top: 1rem;">
+                            <source src="hexit/sounds/spirits/Full long.wav" type="audio/wav">
+                            Your browser does not support the audio element.
+                        </audio>
+                    </div>
+                    <div class="audio-item">
+                        <h3>Item Pickup</h3>
+                        <p>Collection sound effect</p>
+                        <audio controls style="width: 100%; margin-top: 1rem;">
+                            <source src="hexit/sounds/spirits/Item pickupo twoj stary gaming.wav" type="audio/wav">
+                            Your browser does not support the audio element.
+                        </audio>
+                    </div>
+                    <div class="audio-item">
+                        <h3>Knife from Rock</h3>
+                        <p>Tool extraction sound</p>
+                        <audio controls style="width: 100%; margin-top: 1rem;">
+                            <source src="hexit/sounds/spirits/knife from rock.wav" type="audio/wav">
+                            Your browser does not support the audio element.
+                        </audio>
+                    </div>
+                    <div class="audio-item">
+                        <h3>Quest Sound</h3>
+                        <p>Quest completion sound</p>
+                        <audio controls style="width: 100%; margin-top: 1rem;">
+                            <source src="hexit/sounds/spirits/Small short to quest.wav" type="audio/wav">
+                            Your browser does not support the audio element.
+                        </audio>
+                    </div>
+                </div>
+            </div>
+        </section>
 
+        <section class="audio-showcase" style="background: var(--bg-primary);">
+            <div class="container">
+                <h2 class="section-title">Soundtrack</h2>
+                <div class="audio-grid">
+                    <div class="audio-item">
+                        <h3>Menu Soundtrack</h3>
+                        <p>Main menu background music</p>
+                        <audio controls style="width: 100%; margin-top: 1rem;">
+                            <source src="hexit/sounds/spirits/Soundtrack menu twoj stary pijany.wav" type="audio/wav">
+                            Your browser does not support the audio element.
+                        </audio>
+                    </div>
+                </div>
+            </div>
+        </section>
 
-        <div class="team-member">
-            <img src="hexit/hine gif gierki.gif" alt="Spirits Among the trees">
-            <p class="name">Spirits Among the trees</p>
-            <a class="teaminfo">JellyJam 2024</a>
-            <div class="separator"></div>
-            <a href="https://voxten.itch.io/spirits-among-the-trees"  class="buy-button">Play</a>
-        </div>
-
-
-        <div class="indexpromo-image-section">
-            <img src="hexit/bg.png" alt="Obrazek bez tła">
-          </div>
-
-    </section>
-
-    <section id="about-nox">
-        <div class="nox-team-description">
-            <h2>About Sound Design</h2>
-            <p>
-               All Sounds in this game were made by me and my friend Dawid Blacharski. 
-               We started from scratch, making sounds of nature, trees, steps, some magic, pickups, clicks, items, and alot more play the game and check by your self. Below you can listen sounds made by me :]
-            </p>
-        </div>
-    </section>
-
+        <section class="gallery-section">
+            <div class="container">
+                <h2 class="section-title">Game Screenshots</h2>
+                <div class="compact-gallery">
+                    <img src="hexit/1 (1).png" alt="Spirits Among the Trees Screenshot 1">
+                    <img src="hexit/1 (2).png" alt="Spirits Among the Trees Screenshot 2">
+                    <img src="hexit/1 (3).png" alt="Spirits Among the Trees Screenshot 3">
+                    <img src="hexit/1 (4).png" alt="Spirits Among the Trees Screenshot 4">
+                    <img src="hexit/1 (5).png" alt="Spirits Among the Trees Screenshot 5">
+                </div>
+                <div style="text-align: center; margin-top: var(--space-6);">
+                    <a href="https://linktr.ee/hinneo" class="btn btn-secondary">Arts by @hinneo</a>
+                </div>
+            </div>
+        </section>
+    </main>
 
     <div class="privacy-notice" id="privacyNotice">
-        <p>Our website uses cookies to improve the quality of services. Read ours <a href="polityka.html">Privacy Policy</a>.</p>
+        <p>Our website uses cookies to improve the quality of services. Read our <a href="polityka.html">Privacy Policy</a>.</p>
         <button id="acceptButton">Accept</button>
     </div>
-    <div class="separatorsecond">-</div>
-
-    <div class="audio-player">
-        <h1>Sounds</h1>
-        <audio controls>
-            <source src="hexit/sounds/spirits/bush cut.wav" type="audio/mpeg">
-            Twoja przeglądarka nie obsługuje elementu audio.
-        </audio>
-
-        <audio controls>
-            <source src="hexit/sounds/spirits/chest close.wav" type="audio/mpeg">
-            Twoja przeglądarka nie obsługuje elementu audio.
-        </audio>
-
-        <audio controls>
-            <source src="hexit/sounds/spirits/chest open.wav" type="audio/mpeg">
-            Twoja przeglądarka nie obsługuje elementu audio.
-        </audio>
-
-        <audio controls>
-            <source src="hexit/sounds/spirits/Full long.wav" type="audio/mpeg">
-            Twoja przeglądarka nie obsługuje elementu audio.
-        </audio>
-
-        <audio controls>
-            <source src="hexit/sounds/spirits/Item pickupo twoj stary gaming.wav" type="audio/mpeg">
-            Twoja przeglądarka nie obsługuje elementu audio.
-        </audio>
-
-        <audio controls>
-            <source src="hexit/sounds/spirits/knife from rock.wav" type="audio/mpeg">
-            Twoja przeglądarka nie obsługuje elementu audio.
-        </audio>
-
-        <audio controls>
-            <source src="hexit/sounds/spirits/Small short to quest.wav" type="audio/mpeg">
-            Twoja przeglądarka nie obsługuje elementu audio.
-        </audio>
-        <h1>Sound Track</h1>
-
-        <audio controls>
-            <source src="hexit/sounds/spirits/Soundtrack menu twoj stary pijany.wav" type="audio/mpeg">
-            Twoja przeglądarka nie obsługuje elementu audio.
-        </audio>
-
-
-
-        <div class="separatorsecond">-</div>
-
-    <div class="gallery">
-        <img src="hexit/1 (1).png" alt="Spirits Among the trees">
-        <img src="hexit/1 (2).png" alt="Spirits Among the trees">
-        <img src="hexit/1 (3).png" alt="Spirits Among the trees">
-        <img src="hexit/1 (4).png" alt="Spirits Among the trees">
-        <img src="hexit/1 (5).png" alt="Spirits Among the trees">
-
-
-    </div>
-    <div class="artybyclass">
-    <a href="https://linktr.ee/hinneo" class="artby">Arts by @hinneo</a>
-</div>
-
-
-    <div class="separatorsecond">-</div>
-
-    <div class="separatorsecond">-</div>
-
-
-
-
-
 
     <script src="scripts.js"></script>
 
-    <footer>
-        <div class="footer-content">
-            <p>&copy; 2024 Nox. All rights reserved.</p>
-            <ul class="social-media">
-                <li><a href="https://www.instagram.com/noxaudios/">Instagram</a></li>
-                <li><a href="https://www.youtube.com/@noxaudiosofficial/featured">Youtube</a></li>
-            </ul>
+    <footer class="modern-footer">
+        <div class="container">
+            <div class="footer-content">
+                <div class="footer-brand">
+                    <img src="logohexit.webp" alt="Olaf Hexit Rely Zawadzki" class="footer-logo">
+                    <p>Sound Designer & Composer</p>
+                </div>
+                <div class="footer-links">
+                    <div class="footer-section">
+                        <h4>Navigation</h4>
+                        <ul>
+                            <li><a href="index.html">Home</a></li>
+                            <li><a href="portfolio.html">Portfolio</a></li>
+                            <li><a href="offert.html">Services</a></li>
+                            <li><a href="https://linktr.ee/hexitrely">Bio</a></li>
+                        </ul>
+                    </div>
+                    <div class="footer-section">
+                        <h4>Social Media</h4>
+                        <ul>
+                            <li><a href="https://www.instagram.com/hexitrely/">Instagram</a></li>
+                            <li><a href="https://www.youtube.com/@hexitrely">YouTube</a></li>
+                            <li><a href="https://www.tiktok.com/@hexitrely">TikTok</a></li>
+                            <li><a href="https://open.spotify.com/artist/hexitrely">Spotify</a></li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+            <div class="footer-bottom">
+                <p>&copy; 2024 Olaf Hexit Rely Zawadzki. All rights reserved.</p>
+            </div>
         </div>
     </footer>
-
-
-
-
 </body>
 </html>
