--- a/blog-post-template.html
+++ b/blog-post-template.html
@@ -20,7 +20,7 @@
                 <li><a href="portfolio.html">Portfolio</a></li>
                 <li><a href="offert.html">Services</a></li>
                 <li><a href="blog.html">Blog</a></li>
-                <li><a href="index.html#contact">Contact</a></li>
+                <li><a href="contact.html">Contact</a></li>
             </ul>
             <div class="nav-socials">
                 <a href="https://open.spotify.com/artist/4hcXADTFvPXtRxVTGYXW4I?si=PtVSpKbdTgS1t2JG468iXA&nd=1" target="_blank" class="social-link">
@@ -166,7 +166,7 @@
                             <li><a href="portfolio.html">Portfolio</a></li>
                             <li><a href="offert.html">Services</a></li>
                             <li><a href="blog.html">Blog</a></li>
-                            <li><a href="index.html#contact">Contact</a></li>
+                            <li><a href="contact.html">Contact</a></li>
                         </ul>
                     </div>
                     <div class="footer-section">
