--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 <li><a href="portfolio.html">Portfolio</a></li>
                 <li><a href="offert.html">Services</a></li>
                 <li><a href="blog.html">Blog</a></li>
-                <li><a href="#contact">Contact</a></li>
+                <li><a href="contact.html">Contact</a></li>
             </ul>
             <div class="nav-socials">
                 <a href="https://open.spotify.com/artist/4hcXADTFvPXtRxVTGYXW4I?si=PtVSpKbdTgS1t2JG468iXA&nd=1" target="_blank" class="social-link">
@@ -44,7 +44,7 @@
                     <p class="hero-subtitle">Music Producer & Sound Designer specializing in game audio, electronic music, and custom soundscapes</p>
                     <div class="hero-buttons">
                         <a href="portfolio.html" class="btn btn-primary">View Portfolio</a>
-                        <a href="#contact" class="btn btn-secondary">Get In Touch</a>
+                        <a href="contact.html" class="btn btn-secondary">Get In Touch</a>
                     </div>
                 </div>
                 <div class="hero-image">
@@ -191,34 +191,7 @@
             </div>
         </section>
 
-        <section id="contact" class="contact-section">
-            <div class="container">
-                <h2 class="section-title">Let's Create Something Amazing</h2>
-                <p class="contact-description">Ready to bring your project to life with professional audio? Let's discuss your vision.</p>
-                <div class="contact-info">
-                    <div class="contact-item">
-                        <h3>Get In Touch</h3>
-                        <p>Ready to discuss your next project?</p>
-                        <a href="mailto:hexitcontact@gmail.com?subject=Project Inquiry&body=Hello Hexit, I'm interested in discussing a project with you." class="btn btn-secondary">Contact Me</a>
-                    </div>
-                    <div class="contact-item">
-                        <h3>Follow My Work</h3>
-                        <p>Stay updated with my latest releases</p>
-                        <div class="social-links">
-                            <a href="https://open.spotify.com/artist/4hcXADTFvPXtRxVTGYXW4I?si=PtVSpKbdTgS1t2JG468iXA&nd=1" target="_blank" class="social-link">
-                                <img src="spotify.webp" alt="Spotify" class="social-icon">
-                            </a>
-                            <a href="https://www.instagram.com/hexit_official" target="_blank" class="social-link">
-                                <img src="instagram.webp" alt="Instagram" class="social-icon">
-                            </a>
-                            <a href="https://www.youtube.com/channel/UCIpPTE3HsmUSAb-yfNybvSA" target="_blank" class="social-link">
-                                <img src="youtube.webp" alt="YouTube" class="social-icon">
-                            </a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </section>
+        
     </main>
 
     <!-- Lightbox -->
@@ -244,7 +217,7 @@
                             <li><a href="#about">About</a></li>
                             <li><a href="portfolio.html">Portfolio</a></li>
                             <li><a href="offert.html">Services</a></li>
-                            <li><a href="#contact">Contact</a></li>
+                            <li><a href="contact.html">Contact</a></li>
                         </ul>
                     </div>
                     <div class="footer-section">
