--- a/marsfall.html
+++ b/marsfall.html
@@ -12,28 +12,25 @@
         <nav class="nav-container">
             <div class="nav-brand">
                 <a href="index.html">
-                    <img src="logohexit.webp" alt="Olaf Hexit Rely Zawadzki" class="logo">
+                    <img src="logohexit.webp" alt="Hexit Rely Logo" class="logo">
                 </a>
             </div>
             <ul class="nav-menu">
-                <li><a href="index.html">Home</a></li>
-                <li><a href="https://linktr.ee/hexitrely">Bio</a></li>
-                <li><a href="https://maps.app.goo.gl/71z3TfWLPRXDnVmP6">Contact</a></li>
+                <li><a href="index.html#about">About</a></li>
+                <li><a href="portfolio.html">Portfolio</a></li>
                 <li><a href="offert.html">Services</a></li>
-                <li><a href="portfolio.html" class="active">Portfolio</a></li>
+                <li><a href="blog.html">Blog</a></li>
+                <li><a href="contact.html">Contact</a></li>
             </ul>
             <div class="nav-socials">
-                <a href="https://www.instagram.com/hexitrely/" class="social-link" aria-label="Instagram">
+                <a href="https://open.spotify.com/artist/4hcXADTFvPXtRxVTGYXW4I?si=PtVSpKbdTgS1t2JG468iXA&nd=1" target="_blank" class="social-link">
+                    <img src="spotify.webp" alt="Spotify" class="social-icon">
+                </a>
+                <a href="https://www.instagram.com/hexit_official" target="_blank" class="social-link">
                     <img src="instagram.webp" alt="Instagram" class="social-icon">
                 </a>
-                <a href="https://www.youtube.com/@hexitrely" class="social-link" aria-label="YouTube">
+                <a href="https://www.youtube.com/channel/UCIpPTE3HsmUSAb-yfNybvSA" target="_blank" class="social-link">
                     <img src="youtube.webp" alt="YouTube" class="social-icon">
-                </a>
-                <a href="https://www.tiktok.com/@hexitrely" class="social-link" aria-label="TikTok">
-                    <img src="tiktok.webp" alt="TikTok" class="social-icon">
-                </a>
-                <a href="https://open.spotify.com/artist/hexitrely" class="social-link" aria-label="Spotify">
-                    <img src="spotify.webp" alt="Spotify" class="social-icon">
                 </a>
             </div>
         </nav>
@@ -117,7 +114,7 @@
                             <li><a href="index.html">Home</a></li>
                             <li><a href="portfolio.html">Portfolio</a></li>
                             <li><a href="offert.html">Services</a></li>
-                            <li><a href="https://linktr.ee/hexitrely">Bio</a></li>
+                            <li><a href="https://example.com/">Business Card</a></li>
                         </ul>
                     </div>
                     <div class="footer-section">
