--- a/offert.html
+++ b/offert.html
@@ -20,7 +20,7 @@
                 <li><a href="portfolio.html">Portfolio</a></li>
                 <li><a href="offert.html" class="active">Services</a></li>
                 <li><a href="blog.html">Blog</a></li>
-                <li><a href="index.html#contact">Contact</a></li>
+                <li><a href="contact.html">Contact</a></li>
             </ul>
             <div class="nav-socials">
                 <a href="https://open.spotify.com/artist/4hcXADTFvPXtRxVTGYXW4I?si=PtVSpKbdTgS1t2JG468iXA&nd=1" target="_blank" class="social-link">
@@ -193,7 +193,7 @@
                     <h2>Ready to Bring Your Project to Life?</h2>
                     <p>Let's discuss your audio needs and create something amazing together.</p>
                     <div class="cta-buttons">
-                        <a href="https://linktr.ee/hexitrely" class="btn btn-primary btn-large">Start Your Project</a>
+                        <a href="https://example.com/" class="btn btn-primary btn-large">Start Your Project</a>
                         <a href="portfolio.html" class="btn btn-secondary btn-large">View My Work</a>
                     </div>
                 </div>
@@ -215,7 +215,7 @@
                             <li><a href="index.html#about">About</a></li>
                             <li><a href="portfolio.html">Portfolio</a></li>
                             <li><a href="offert.html">Services</a></li>
-                            <li><a href="index.html#contact">Contact</a></li>
+                            <li><a href="contact.html">Contact</a></li>
                         </ul>
                     </div>
                     <div class="footer-section">
