--- a/post1.html
+++ b/post1.html
@@ -13,7 +13,7 @@
                 <img src="logohexit.webp" alt="hexit Logo" class="logo" >   <!--  tu logo -->
                 </a>
             <ul>                                                                                <!-- podmień na linki swoje aby podpiąć sociale do menu  -->
-                <li><a href="https://linktr.ee/hexitrely">Bio</a></li>
+                <li><a href="https://example.com/">Business Card</a></li>
                 <li><a href="https://open.spotify.com/artist/4hcXADTFvPXtRxVTGYXW4I?si=PtVSpKbdTgS1t2JG468iXA&nd=1">Spotify</a></li>
                 <li><a href="https://maps.app.goo.gl/71z3TfWLPRXDnVmP6">Contact</a></li>
                 <li><a href="offert.html">Offert</a></li>
