--- a/contact.html
+++ b/contact.html
@@ -49,7 +49,7 @@
                         </div>
                     </div>
                     <div class="business-card-actions">
-                        <a href="mailto:hexitcontact@gmail.com?subject=Project%20Inquiry&body=Hello%20Hexit%2C%20I'm%20interested%20in%20discussing%20a%20project%20with%20you." class="btn btn-primary">Send Email</a>
+                        <button id="copyEmailBtn" type="button" class="btn btn-primary" data-email="hexitcontact@gmail.com">Copy Email</button>
                         <a href="https://wa.me/+48537730422" target="_blank" rel="noopener" class="btn btn-secondary">WhatsApp</a>
                         <a href="https://share.google/nJk1HgfMYc8RhnCv5" target="_blank" rel="noopener" class="btn btn-secondary">Google Company</a>
                         <a href="portfolio.html" class="btn btn-secondary">Portfolio</a>
