--- a/portfolio.html
+++ b/portfolio.html
@@ -160,15 +160,17 @@
 
                     <div class="project-card">
                         <div class="project-image">
-                            <img src="hexit/underseatricks.webp" alt="Rapid 02">
+                            <img src="hexit/rapid 01/image.png" alt="Rapid 01">
                             <div class="project-overlay">
-                                <a href="Rapid02.html" class="btn btn-primary">View Project</a>
+                                <a href="Rapid01.html" class="btn btn-primary">View Project</a>
                             </div>
                         </div>
                         <div class="project-content">
-                            <h3>Rapid 02</h3>
-                            <p>SOON</p>
-                            <span class="project-tag">Arcade Race</span>
+                            <h3>Arcade Racing 3D</h3>
+                            <p>Project RAPID of 8bit jelly team</p>
+                            <span class="project-tag">Sound Design</span>
+                             <span class="project-tag">Music Production</span>
+                            <span class="project-tag">Unity</span>
                         </div>
                     </div>
                    
@@ -182,7 +184,7 @@
                         <div class="project-content">
                             <h3>Shovel of the Damned</h3>
                             <p>VOXTEN - Horror Game Soundtrack</p>
-                            <span class="project-tag">Horror</span>
+                            <span class="project-tag">Sound Design</span>
                         </div>
                     </div>
 
@@ -196,7 +198,8 @@
                         <div class="project-content">
                             <h3>Elemental Labirynth</h3>
                             <p>Fantasy Adventure Soundtrack</p>
-                            <span class="project-tag">Fantasy</span>
+                            <span class="project-tag">Music Production</span>
+                             <span class="project-tag">F Mod</span>
                         </div>
                     </div>
 
@@ -210,23 +213,13 @@
                         <div class="project-content">
                             <h3>Orbs and Spirits</h3>
                             <p>8BitJelly - Platformer Game Audio</p>
-                            <span class="project-tag">Platformer</span>
+                            <span class="project-tag">Music Production</span>
+                            <span class="project-tag">Sound Design</span>
+                            <span class="project-tag">Unity</span>
                         </div>
                     </div>
 
-                    <div class="project-card">
-                        <div class="project-image">
-                            <img src="hexit/underseatricks.webp" alt="UnderSeaTricks">
-                            <div class="project-overlay">
-                                <a href="underseatricks.html" class="btn btn-primary">View Project</a>
-                            </div>
-                        </div>
-                        <div class="project-content">
-                            <h3>UnderSeaTricks</h3>
-                            <p>8BitJelly - Underwater Adventure</p>
-                            <span class="project-tag">Adventure</span>
-                        </div>
-                    </div>
+        
 
                     <div class="project-card">
                         <div class="project-image">
@@ -238,7 +231,9 @@
                         <div class="project-content">
                             <h3>Marsfall</h3>
                             <p>Brackeys 2024 - Sci-Fi Game Audio</p>
-                            <span class="project-tag">Sci-Fi</span>
+                             <span class="project-tag">Music Production</span>
+                            <span class="project-tag">Sound Design</span>
+                            <span class="project-tag">Unity</span>
                         </div>
                     </div>
 
@@ -252,7 +247,9 @@
                         <div class="project-content">
                             <h3>Spirits Among the Trees</h3>
                             <p>Jelly Jam 2024 - Atmospheric Game</p>
-                            <span class="project-tag">Atmospheric</span>
+                            <span class="project-tag">Music Production</span>
+                            <span class="project-tag">Sound Design</span>
+                            <span class="project-tag">Unity</span>
                         </div>
                     </div>
 
@@ -266,7 +263,9 @@
                         <div class="project-content">
                             <h3>Forest Maze</h3>
                             <p>Jelly Jam 2024 - Puzzle Game Audio</p>
-                            <span class="project-tag">Puzzle</span>
+                            <span class="project-tag">Music Production</span>
+                            <span class="project-tag">Sound Design</span>
+                            <span class="project-tag">Unreal</span>
                         </div>
                     </div>
 
@@ -280,7 +279,9 @@
                         <div class="project-content">
                             <h3>Hex Forest</h3>
                             <p>Jelly Jam 2024 - Strategy Game Audio</p>
-                            <span class="project-tag">Strategy</span>
+                             <span class="project-tag">Music Production</span>
+                            <span class="project-tag">Sound Design</span>
+                            <span class="project-tag">Unity</span>
                         </div>
                     </div>
                 </div>
