--- a/portfolio.html
+++ b/portfolio.html
@@ -162,7 +162,7 @@
                         <div class="project-image">
                             <img src="hexit/rapid 01/image.png" alt="Rapid 01">
                             <div class="project-overlay">
-                                <a href="Rapid01.html" class="btn btn-primary">View Project</a>
+                                <a href="rapid01.html" class="btn btn-primary">View Project</a>
                             </div>
                         </div>
                         <div class="project-content">
