--- a/rapid01.html
+++ b/rapid01.html
@@ -60,7 +60,7 @@
                 <h2 class="section-title">About the Sound Design</h2>
                 <div class="about-content">
                     <div class="about-description">
-                        <p>n a futuristic neon-lit city, every turn is a battle against time, and every sound tells a story.
+                        <p>In a futuristic neon-lit city, every turn is a battle against time, and every sound tells a story.
 For Neon Rush, I crafted a full spectrum of sounds capturing the adrenaline and rhythm of high-speed arcade racing — from roaring turbo engines to synthetic UI elements and the atmospheric hum of a city alive at night.</p>
                       
 <p>Dynamic audio layers react to acceleration, drifts, and collisions, creating a powerful sense of motion and energy. You can feel the rhythm of the asphalt, the screech of tires, and the echo of music bouncing off glass skyscrapers.
