--- a/portfolio.html
+++ b/portfolio.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio - Hexit Rely</title>
     <link rel="stylesheet" href="styles.css">
+   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
 </head>
 <body>
@@ -81,14 +83,7 @@
             </div>
         </section>
 
-        <section class="video-showcase">
-            <div class="container">
-                <h2 class="section-title">Behind the Scenes</h2>
-                <div class="video-container">
-                    <iframe width="100%" height="500" src="https://www.youtube.com/embed/Pg1FvctWbpc?si=XQdsVuwC2ezsxOlg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-                </div>
-            </div>
-        </section>
+       
 <!-- 
     <section id="about-nox">
         <div class="nox-team-description">
@@ -153,6 +148,136 @@
             </div>
         </section>
 
+
+
+<section class="skills-section">
+  <h2>Skills</h2>
+
+  <div class="skill">
+    <i class="icon fas fa-sliders-h"></i>
+    <span class="skill-name">Mixing</span>
+    <div class="dots">
+      <span class="dot filled"></span>
+      <span class="dot filled"></span>
+      <span class="dot filled"></span>
+      <span class="dot filled"></span>
+      <span class="dot filled"></span>
+    </div>
+  </div>
+
+  <div class="skill">
+    <i class="icon fas fa-wave-square"></i>
+    <span class="skill-name">Mastering</span>
+    <div class="dots">
+      <span class="dot filled"></span>
+      <span class="dot filled"></span>
+      <span class="dot filled"></span>
+      <span class="dot filled"></span>
+      <span class="dot filled"></span>
+    </div>
+  </div>
+
+  <div class="skill">
+    <i class="icon fas fa-microphone"></i>
+    <span class="skill-name">Audio Recording</span>
+    <div class="dots">
+      <span class="dot filled"></span>
+      <span class="dot filled"></span>
+      <span class="dot filled"></span>
+      <span class="dot filled"></span>
+      <span class="dot filled"></span>
+    </div>
+  </div>
+
+  <div class="skill">
+    <i class="icon fas fa-gamepad"></i>
+    <span class="skill-name">FMOD</span>
+    <div class="dots">
+      <span class="dot filled"></span>
+      <span class="dot filled"></span>
+      <span class="dot filled"></span>
+      <span class="dot filled"></span>
+      <span class="dot"></span>
+    </div>
+  </div>
+
+  <div class="skill">
+    <i class="icon fas fa-cube"></i>
+    <span class="skill-name">Unity</span>
+    <div class="dots">
+      <span class="dot filled"></span>
+      <span class="dot filled"></span>
+      <span class="dot filled"></span>
+      <span class="dot filled"></span>
+      <span class="dot"></span>
+    </div>
+  </div>
+
+  <div class="skill">
+  <i class="icon fas fa-cogs"></i>
+  <span class="skill-name">Unreal Engine</span>
+  <div class="dots vertical">
+    <span class="dot filled"></span>
+    <span class="dot filled"></span>
+    <span class="dot filled"></span>
+    <span class="dot "></span>
+    <span class="dot"></span>
+  </div></div>
+
+<div class="skill">
+  <i class="icon fas fa-code"></i>
+  <span class="skill-name">Godot</span>
+  <div class="dots vertical">
+    <span class="dot filled"></span>
+    <span class="dot filled"></span>
+    <span class="dot filled"></span>
+    <span class="dot"></span>
+    <span class="dot"></span>
+  </div>
+</div>
+
+
+  <div class="skill">
+    <i class="icon fas fa-check-circle"></i>
+    <span class="skill-name">ClickUp</span>
+    <div class="dots">
+      <span class="dot filled"></span>
+      <span class="dot filled"></span>
+      <span class="dot filled"></span>
+      <span class="dot filled"></span>
+      <span class="dot filled"></span>
+    </div>
+  </div>
+
+  <div class="skill">
+    <i class="icon fas fa-tasks"></i>
+    <span class="skill-name">Asana</span>
+    <div class="dots">
+      <span class="dot filled"></span>
+      <span class="dot filled"></span>
+      <span class="dot filled"></span>
+      <span class="dot filled"></span>
+      <span class="dot"></span>
+    </div>
+  </div>
+
+  <div class="skill">
+    <i class="icon fas fa-project-diagram"></i>
+    <span class="skill-name">Trello</span>
+    <div class="dots">
+      <span class="dot filled"></span>
+      <span class="dot filled"></span>
+      <span class="dot filled"></span>
+      <span class="dot filled"></span>
+      <span class="dot filled"></span>
+    </div>
+  </div>
+
+</section>
+
+
+  <div class="separatorsecond">-</div>
+
         <section class="projects-section">
             <div class="container">
                 <h2 class="section-title">Game Development Projects</h2>
@@ -199,7 +324,8 @@
                             <h3>Elemental Labirynth</h3>
                             <p>Fantasy Adventure Soundtrack</p>
                             <span class="project-tag">Music Production</span>
-                             <span class="project-tag">F Mod</span>
+                            <span class="project-tag">F Mod</span>
+                            <span class="project-taggreen">commercial</span>
                         </div>
                     </div>
 
@@ -216,6 +342,7 @@
                             <span class="project-tag">Music Production</span>
                             <span class="project-tag">Sound Design</span>
                             <span class="project-tag">Unity</span>
+                            <span class="project-tagred">unfinished</span>
                         </div>
                     </div>
 
@@ -288,8 +415,14 @@
             </div>
         </section>
 
-
-
+ <section class="video-showcase">
+            <div class="container">
+                <h2 class="section-title">Behind the Scenes</h2>
+                <div class="video-container">
+                    <iframe width="100%" height="500" src="https://www.youtube.com/embed/Pg1FvctWbpc?si=XQdsVuwC2ezsxOlg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                </div>
+            </div>
+        </section>
 
 
 
